Fixed GET /employees. Enabled SQL debugging for LOCAL environments.
